Bug 310365 - Selection is not cleared before pasted or dropped items are selected
Summary: Selection is not cleared before pasted or dropped items are selected
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: investigated, regression
Depends on:
Blocks:
 
Reported: 2012-11-19 18:59 UTC by Frank Reininghaus
Modified: 2012-11-24 15:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2012-11-19 18:59:29 UTC
Bug 223905 is back. This is a recent regression in the KDE/4.9 branch, caused by

https://projects.kde.org/projects/kde/kde-baseapps/repository/revisions/b25059e803e7eed54f0593605a4066882d63bce2

Reproducible: Always

Steps to Reproduce:
1. Select some items in the view.
2. Drop or paste some more items in the view.

Actual Results:  
Not only are the new items selected, but the old selection is still there as well.

Expected Results:  
Only the new items should be selected.
Comment 1 Frank Reininghaus 2012-11-19 21:08:49 UTC
Proposed fix at https://git.reviewboard.kde.org/r/107389/.
Comment 2 Frank Reininghaus 2012-11-24 15:08:57 UTC
Git commit 5f6c60f0e1e82c235eca855e1f78edc8f8c7a67a by Frank Reininghaus.
Committed on 19/11/2012 at 22:06.
Pushed by freininghaus into branch 'KDE/4.9'.

Clear the previous selection when selecting pasted or dropped items

This fixes a recent regression in the 4.9 branch caused by
b25059e803e7eed54f0593605a4066882d63bce2.
FIXED-IN: 4.9.4
REVIEW: 107389

M  +8    -0    dolphin/src/views/dolphinview.cpp
M  +1    -0    dolphin/src/views/dolphinview.h

http://commits.kde.org/kde-baseapps/5f6c60f0e1e82c235eca855e1f78edc8f8c7a67a