Clear the previous selection when selecting pasted or dropped items

This fixes a recent regression in the 4.9 branch caused by
b25059e803e7eed54f0593605a4066882d63bce2.

BUG: 310365
FIXED-IN: 4.9.4
REVIEW: 107389